updated code and some files added

--- a/static/interactive-gallery.html
+++ b/static/interactive-gallery.html
@@ -19,14 +19,80 @@
         <p>Explore the beauty and history of the Barkur Temples through a collection of stunning photographs.</p>
 
         <div class="gallery-container">
-            <a href="Assets/Ekanatheshwari.png" data-fancybox="gallery">
-                <img src="Assets/Ekanatheshwari.png" alt="Temple 1">
+            <a href="Assets/BatteVinayaka.jpg" data-fancybox="gallery">
+                <img src="Assets/BatteVinayaka.jpg" alt="Temple 3">
             </a>
-            <a href="Assets/Panchlingeshvara.png" data-fancybox="gallery">
-                <img src="Assets/Panchlingeshvara.png" alt="Temple 2">
+             <a href="Assets/ChowlikereGanapathi.jpg" data-fancybox="gallery">
+                <img src="Assets/ChowlikereGanapathi.jpg" alt="Temple 1">
             </a>
-            <a href="Assets/Someshwar.png" data-fancybox="gallery">
-                <img src="Assets/Someshwar.png" alt="Temple 3">
+            <a href="Assets/ChowlikereGanapathi1.jpg" data-fancybox="gallery">
+                <img src="Assets/ChowlikereGanapathi1.jpg" alt="Temple 2">
+            </a>
+            <a href="Assets/ChowlikereGanapathi2.jpg" data-fancybox="gallery">
+                <img src="Assets/ChowlikereGanapathi2.jpg" alt="Temple 3">
+            </a>
+            <a href="Assets/ChowlikereGanapathi3.jpg" data-fancybox="gallery">
+                <img src="Assets/ChowlikereGanapathi3.jpg" alt="Temple 3">
+            </a>
+             <a href="Assets/ChowlikereGanapathi4.jpg" data-fancybox="gallery">
+                <img src="Assets/ChowlikereGanapathi4.jpg" alt="Temple 1">
+            </a>
+            <a href="Assets/ChowlikereGanapathi5.jpg" data-fancybox="gallery">
+                <img src="Assets/ChowlikereGanapathi5.jpg" alt="Temple 2">
+            </a>
+            <a href="Assets/ChowlikereGanapathi6.jpg" data-fancybox="gallery">
+                <img src="Assets/ChowlikereGanapathi6.jpg" alt="Temple 3">
+            </a>
+            <a href="Assets/ChowlikereGanapathi7.jpg" data-fancybox="gallery">
+                <img src="Assets/ChowlikereGanapathi7.jpg" alt="Temple 3">
+            </a>
+             <a href="Assets/Ekanatheshwari.jpg" data-fancybox="gallery">
+                <img src="Assets/Ekanatheshwari.jpg" alt="Temple 1">
+            </a>
+            <a href="Assets/Ekanatheshwari1.jpg" data-fancybox="gallery">
+                <img src="Assets/Ekanatheshwari1.jpg" alt="Temple 2">
+            </a>
+            <a href="Assets/Ekanatheshwari2.jpg" data-fancybox="gallery">
+                <img src="Assets/Ekanatheshwari2.jpg" alt="Temple 3">
+            </a>
+            <a href="Assets/Ekanatheshwari3.jpg" data-fancybox="gallery">
+                <img src="Assets/Ekanatheshwari3.jpg" alt="Temple 3">
+            </a>
+             <a href="Assets/KathaleBasadi.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi.jpg" alt="Temple 1">
+            </a>
+            <a href="Assets/KathaleBasadi1.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi1.jpg" alt="Temple 2">
+            </a>
+            <a href="Assets/KathaleBasadi2.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi2.jpg" alt="Temple 3">
+            </a>
+               <a href="Assets/KathaleBasadi3.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi3.jpg" alt="Temple 1">
+            </a>
+            <a href="Assets/KathaleBasadi4.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi4.jpg" alt="Temple 2">
+            </a>
+            <a href="Assets/KathaleBasadi5.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi5.jpg" alt="Temple 3">
+            </a>
+            <a href="Assets/KathaleBasadi6.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi6.jpg" alt="Temple 3">
+            </a>
+             <a href="Assets/KathaleBasadi7.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi7.jpg" alt="Temple 1">
+            </a>
+            <a href="Assets/KathaleBasadi8.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi8.jpg" alt="Temple 2">
+            </a>
+            <a href="Assets/KathaleBasadi9.jpg" data-fancybox="gallery">
+                <img src="Assets/KathaleBasadi9.jpg" alt="Temple 3">
+            </a>
+            <a href="Assets/Temple1.jpg" data-fancybox="gallery">
+                <img src="Assets/Temple1.jpg" alt="Temple 1">
+            </a>
+            <a href="Assets/Temple2.jpg" data-fancybox="gallery">
+                <img src="Assets/Temple2.jpg" alt="Temple 2">
             </a>
             <!-- Add more temple images here -->
             <div id="temple-modal" class="modal hidden">
