--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Echo's of barkur</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="themes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,11 +14,75 @@
     <section class="main">
         <div class="main-content">
             <h1>Discover Barkur Temples</h1>
-            <p>Explore the rich heritage of Udupi</p>
+            <p>Explore the rich heritage of Barkur</p>
             <a href="#explore" class="btn">Explore</a>
         </div>
     </section>
-
+    <section class="about-barkur">
+        <h2 >About Barkur</h2>
+        <p>
+            Barakur falls in the region known as the Parashurama Kshetra, the coastal belt between the Western Ghats and the sea from Konkan to Malabar. Parashurama installed different Rishis on portions of the region, with Barakur given to Rishi Markandeya.
+        </p>
+        <p>Barkur (also historically known as Barakanur and Barahakanyapur) is an area
+             in the Brahmavara taluk, Udupi district of Karnataka, comprising three villages, 
+             Hosala, Hanehalli, and Kachoor. The area is located on the banks of River Seetha,
+              which originates in the rainforests of Agumbe. It is also referred to as a “temple town.”
+              Barkur is 16 km from Udupi, another ancient city, and 3 km from Brahmavara, a taluk 
+              of Udupi. The Seetha River flows through Barkur and joins the Arabian Sea. In ancient times, Barkur was a coastal town on the common estuary of Seethanadi and Swarnanadi, however, the town is now 1 km inland. Seethanadi was broad and deep permitting 
+              navigation in ancient times. Now silting prohibits the entry of sea-going vessels.
+            </p>
+            <p>
+                Barkur was the ancient capital of the Alupa kingdom. It was known as 
+                Barakanyapura and later as Barakkanur. The rulers were known as Tuluva 
+                rulers and spoke the Tulu language. Many ancient inscriptions found in Barkur 
+                are in this language. These inscriptions are an essential part of the history 
+                of Tulunadu. The coastal town of Barkur was a flourishing port in the 15th and
+                 16th centuries. Archaeological findings suggest that Barkur was a province 
+                 under the Vijayanagar Empire in the 14th century CE. Pandarideva was the 
+                 Governor of this province under the regime of Harihara II. There are remains 
+                 of two forts built by the Alupas and Vijayanagara governors. It was also a 
+                 sub-capital of the Hoysala kings for some period.
+            </p>
+            <p>
+                Tulu language has a limited presence now. 6 km south of Barkur, 
+                Tulu abruptly ends and makes way for a dialect of Kannada called Barkur 
+                Kannada, but barring the language, the cultural, social, and caste structures 
+                are identical to those of the Tulu era, including the matrilineal inheritance.
+                 Additionally, Konkani, Marathi, Beary, and Dakhni are also spoken, making Barkur 
+                 a highly multilingual melting pot.
+            </p>
+            <p>
+                According to Kerala Muslim tradition, Barkur was home to one of the oldest 
+                mosques in the Indian subcontinent. According to the legend of Cheraman 
+                Perumals, the first Indian mosque was built in 624 CE at Kodungallur under 
+                the mandate of the last ruler (the Cheraman Perumal) of the Chera dynasty.
+            </p>
+            <p>
+                The name Barahakanyapura was first used in 1070, during the reign of Alupa 
+                Dattalavendra Shree Mara, who had his royal palace at the present Shinhasana Gudde 
+                known as Periyara Mane. Emperor Vikramaditya VI defeated the Alupa King in the year 1076-77.
+                 The Chalukya kings (of Kalyan) had authority over the region but the local Alupa Kings 
+                 were independent in administration.
+            </p>
+            <p>
+                Hoysala kings were ruling most of Karnataka during 1140-1336 with Dwarasamudra their 
+                capital city. Since some Hoysalas were Jains, it is said that the Alupa too might have 
+                embraced Jainism and built the Basadis at Barkur. Once Hoysala king Vishnu Vardhana 
+                – (1117-1140) embraced the Vaishnava religion, Hindu temples were also built at Barkur 
+                by the local Alupa rulers.
+            </p>
+            <p>
+                The Alupa kings made Barkur their capital and commercial hub in the 10-11th century CE 
+                and it continued till the end of the 14th century CE.
+                In 1333, the Hoysala king Veera Ballala planned to attack the Tulu empire.
+                 However, the Alupa king Soyee Deva Alupendra received him with honour and King Veera
+                 Ballala married the Alupa princess, Chikkayi Thai. 
+                 King Veera Ballala died in the battle at Madurai in 1336 and the vacant Barkur 
+                 throne was occupied by Chikkai Thai. She constructed the Wooden Bridge connecting 
+                 Barkur-Benne Kudru. Most of the Jain Basadi’s at Barkur were constructed and the existing 
+                 ones were renovated by Alupa and Jain Hoysala rulers.
+            </p>
+    </section>
     <section class="temple-cards" id="explore">
         <h4 class="subheading"></h4>
         <h2>Discover the divine heritage of Barkur</h2>
