--- a/static/about.html
+++ b/static/about.html
@@ -9,14 +9,25 @@
   <link rel="stylesheet" href="components.css" />
   <link rel="stylesheet" href="pages.css" />
   <link rel="stylesheet" href="themes.css" />
+  <style>
+        .github-link {
+            color: blue;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
   <div id="header-placeholder"></div>
 
   <section class="main-content">
-    <h1>About Dev</h1>
-    <p>Tejas v : Full stack devloper :)</p>
-  </section>
+        <h1>About</h1>
+        <p>This website is developed and maintained by:</p>
+        <ul>
+            <li>Dev : Tejas v</li>
+            <li>Email: tejasv887@gmail.com</li>
+            <li>GitHub: <a href="https://github.com/Tejasvz" target="_blank" rel="noopener noreferrer" class="github-link">https://github.com/Tejasvz</a></li>
+        </ul>
+    </section>
 
   <footer>
     <p>© 2025 Barkur Temples. All rights reserved.</p>
