--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
         </div>
     </section>
     <section class="about-barkur">
-        <h2 >About Barkur</h2>
+        <h2 >__________________About Barkur__________________</h2>
         <p>
             Barakur falls in the region known as the Parashurama Kshetra, the coastal belt between the Western Ghats and the sea from Konkan to Malabar. Parashurama installed different Rishis on portions of the region, with Barakur given to Rishi Markandeya.
         </p>
