--- a/static/interactive-gallery.html
+++ b/static/interactive-gallery.html
@@ -15,8 +15,8 @@
     <div id="header-placeholder"></div>
 
     <section class="gallery-section">
-        <h1>Interactive Gallery</h1>
-        <p>Explore the beauty and history of the Barkur Temples through a collection of stunning photographs.</p>
+        <h1> Gallery</h1>
+        <p>Explore the beauty of the Barkur Temples through a collection of stunning photographs.</p>
 
         <div class="gallery-container">
             <a href="Assets/BatteVinayaka.jpg" data-fancybox="gallery">
